still not working

--- a/RealMission8-group2-7/appsettings.json
+++ b/RealMission8-group2-7/appsettings.json
@@ -6,7 +6,7 @@
     }
   },
   "AllowedHosts": "*",
-  {
-    "mission8Connection": "Data Source = tasksdatabase.sqlite"
+  "ConnectionStrings":{
+    "connect": "Data Source = tasksdatabase.sqlite"
   }
 }
